--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <br>
       <div class="hellofriends" ng-repeat="person in tas.data
          | filter:friendFilterQuery
-         | orderBy:'':friendReverse">
+         | orderBy:'name':friendReverse">
         <h1 style="display: inline">Hello {{person.name | uppercase}}</h1>
         <button ng-click="tas.removeTA(person)">X</button>
       </div>
