--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
     <div class="container" ng-controller="TasController as tas">
       <h1>My TAddress Book</h1>
       New TA:
-      <input ng-model="tas.newName">
+      <br>
+      Name: <input ng-model="tas.newName">
+      <br>
+      Nickname: <input ng-model="tas.newNickname">
+      <br>
+      First Name: <input ng-model="tas.newFirstName">
+      <br>
+      Last Name: <input ng-model="tas.newLastName">
+      <br>
       <button ng-click="tas.addTA()">Save</button>
       <br>
       Search: <input ng-model="friendFilterQuery">
@@ -23,12 +31,29 @@
       Sort:
       <button ng-click="friendReverse=!friendReverse">Change Sort</button>
       <br>
-      <div class="hellofriends" ng-repeat="person in tas.data
-         | filter:friendFilterQuery
-         | orderBy:['current','-nickName']:friendReverse">
-        <h1 style="display: inline">Hello {{person.nickName + ' ' + person.name | uppercase}}</h1>
-        <button ng-click="tas.removeTA(person)">X</button>
-      </div>
+      <table>
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Nick Name</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="hellofriends" ng-repeat="person in tas.data
+            | filter:friendFilterQuery
+            | orderBy:['current','-nickName']:friendReverse">
+            <td>{{person.name}}</td>
+            <td>{{person.nickName | uppercase}}</td>
+            <td>{{person.firstName}}</td>
+            <td>{{person.lastName}}</td>
+            <td>
+              <button ng-click="tas.removeTA(person)">X</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
     <script src="bower_components/angular/angular.min.js"></script>
