--- a/index.html
+++ b/index.html
@@ -14,17 +14,15 @@
 
     <div class="container" ng-controller="TasController as tas">
       <h1>My TAddress Book</h1>
-      New TA:
-      <br>
-      Name: <input ng-model="tas.newName">
-      <br>
-      Nickname: <input ng-model="tas.newNickname">
-      <br>
-      First Name: <input ng-model="tas.newFirstName">
-      <br>
-      Last Name: <input ng-model="tas.newLastName">
-      <br>
-      <button ng-click="tas.addTA()">Save</button>
+      <form ng-submit="tas.addTA()">
+        <label>First:<label>
+        <input ng-model="tas.newTA.firstName" required>
+        <label>Last:<label>
+        <input ng-model="tas.newTA.lastName" required>
+        <label>Current:<label>
+        <input type="checkbox" ng-model="tas.newTA.current">
+        <input type="submit" value="Save">
+      </form>
       <br>
       Search: <input ng-model="friendFilterQuery">
       <br>
@@ -38,6 +36,7 @@
             <th>Nick Name</th>
             <th>First Name</th>
             <th>Last Name</th>
+            <th>Current</th>
           </tr>
         </thead>
         <tbody>
@@ -48,6 +47,7 @@
             <td>{{person.nickName | uppercase}}</td>
             <td>{{person.firstName}}</td>
             <td>{{person.lastName}}</td>
+            <td><input type="checkbox" ng-checked={{person.current}}></td>
             <td>
               <button ng-click="tas.removeTA(person)">X</button>
             </td>
