--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Title</title>
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
@@ -14,13 +15,23 @@
 
     <div class="container" ng-controller="TasController as tas">
       <h1>My TAddress Book</h1>
-      <form ng-submit="tas.addTA()">
-        <label>First:<label>
-        <input ng-model="tas.newTA.firstName" required>
-        <label>Last:<label>
-        <input ng-model="tas.newTA.lastName" required>
-        <label>Current:<label>
-        <input type="checkbox" ng-model="tas.newTA.current">
+      <form name="tas.newTA" ng-submit="tas.addTA()">
+        <div class="form-group" ng-class="{'has-error': tas.newTA.$dirty}">
+          <label class="control-label">First:</label>
+          <input class="form-control" ng-model="tas.newTA.firstName" required>
+        </div>
+        <div class="form-group" ng-class="{'has-error': tas.newTA.$dirty}">
+          <label class="control-label">Last:</label>
+          <input class="form-control" ng-model="tas.newTA.lastName" required>
+        </div>
+        <div ng-class="{'has-error': tas.newTA.$dirty}">
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" ng-model="tas.newTA.current">
+              Current
+            </label>
+          </div>
+        </div>
         <input type="submit" value="Save">
       </form>
       <br>
@@ -47,7 +58,7 @@
             <td>{{person.nickName | uppercase}}</td>
             <td>{{person.firstName}}</td>
             <td>{{person.lastName}}</td>
-            <td><input type="checkbox" ng-checked={{person.current}}></td>
+            <td><input type="checkbox" disabled ng-checked={{person.current}}></td>
             <td>
               <button ng-click="tas.removeTA(person)">X</button>
             </td>
