--- a/index.html
+++ b/index.html
@@ -15,15 +15,20 @@
 
     <div class="container" ng-controller="TasController as tas">
       <h1>My TAddress Book</h1>
-      <form name="tas.newTA" ng-submit="tas.addTA()">
+      <form name="tas.newTA" ng-submit="tas.addTA()" novalidate>
         <div class="form-group" ng-class="{'has-error': tas.newTA.$dirty}">
           <label class="control-label">First:</label>
-          <input class="form-control" ng-model="tas.newTA.firstName" required>
+          <input class="form-control" ng-model="tas.newTA.firstName" required minlength=5>
+          <span class="help-block" ng-show="tas.newTA.$invalid && tas.newTA.$dirty">A block of help text that breaks onto a new line and may extend beyond one line.</span>
         </div>
         <div class="form-group" ng-class="{'has-error': tas.newTA.$dirty}">
           <label class="control-label">Last:</label>
           <input class="form-control" ng-model="tas.newTA.lastName" required>
+          <span class="help-block" ng-show="tas.newTA.lastName.$error && tas.newTA.$dirty">A block of help text that breaks onto a new line and may extend beyond one line.</span>
         </div>
+        <select class="form-control" ng-model="tas.newTA.cohort">
+          <option ng-selected="key===2" ng-repeat="(key, val) in tas.cohortOptions" value={{key}}>{{val}}</option>
+        </select>
         <div ng-class="{'has-error': tas.newTA.$dirty}">
           <div class="checkbox">
             <label>
@@ -32,7 +37,7 @@
             </label>
           </div>
         </div>
-        <input class="btn" ng-class="{'btn-danger': tas.newTA.$invalid, 'btn-success': tas.newTA.$valid}" ng-disabled="tas.newTA.$invalid" type="submit" value="Save">
+        <input class="btn btn-success" ng-show="tas.newTA.$valid" type="submit" value="Save">
       </form>
       <table class="table">
         <thead>
@@ -41,6 +46,7 @@
             <th>Nick Name</th>
             <th>First Name</th>
             <th>Last Name</th>
+            <th>Cohort</th>
             <th>Current</th>
           </tr>
         </thead>
@@ -52,6 +58,7 @@
             <td>{{person.nickName | uppercase}}</td>
             <td>{{person.firstName}}</td>
             <td>{{person.lastName}}</td>
+            <td>{{person.cohort}}</td>
             <td><input type="checkbox" disabled ng-checked={{person.current}}></td>
             <td>
               <button ng-click="tas.removeTA(person)">X</button>
